# aw_t113_i_boot

./: .gitignore  README.md  build.json  download.bat
app/: .config  app.img  link.lds  rtconfig.h  rtconfig.py  run.bat
app/applications/: main.c  mnt.c
app/drivers/: Kconfig  SConscript  board.c  board.h  drv_clk.c  drv_clk.h  drv_dmac.c  drv_dmac.h  drv_emac.c  drv_emac.h  drv_iomux.c  drv_iomux.h  drv_smhc.c  drv_twi.c  (+3 more)
app_1/: .config  rtconfig.h  rtconfig.py  run.bat
application/: .cproject  Kconfig  SConscript  SConstruct  board.c  board.h  config_m  config_s  link_m.lds  link_s.lds  main.c  rtconfig.h  rtconfig.py  run.bat  update_config.py
boot0/: CMakeLists.txt  SConstruct  biuld.bat  download.bat  run.bat
boot1/: CMakeLists.txt  build.bat  build.json  download.bat  run.bat
boot1/application/: board.c  board.h  main.c
boot1/boards/: SConscript  drv_clk.c  drv_clk.h  drv_gpio.c  drv_gpio.h  drv_iomux.c  drv_nand.c  drv_nand.h  drv_spi.c  drv_spi.h  drv_uart.c  drv_uart.h
boot1/boards/aw_boot_lib/: exception.c  sunxi_dma.c
boot1/boards/include/: SConscript
boot1/boards/port/: littlefs_port.c  littlefs_port.h  partition_port.c  partition_port.h  shell_port.c  shell_port.h  ymodem_port.c  ymodem_port.h
boot1/hgboot/: README.md  SConscript  hgboot.c  hgboot.h  hgboot_port.c
boot1/hgboot/boot/: SConscript  boot.c  boot.h
boot1/hgboot/ota/: ota.c  ota.h
boot1/hgboot/partition/: partition.c  partition.h
boot1/hgboot/shell/: shell.c  shell.h  xformat.c  xformat.h  xstring.c  xstring.h
boot1/hgboot/ymodem/: ymodem.c  ymodem.h
boot1/lfs/: lfs_util.h
boot1/libcpu/: SConscript  armv7.h  cp15.h  cp15_gcc.S  gic.c  gic.h  interrupt.c  interrupt.h  mmu.c  mmu.h  start.S  trap.c  vector_gcc.S
boot1/link_scripts/: link.lds
boot1/memheap/: SConscript  memheap.c  memheap.h
boot1/ota/: ota.c  ota.h
boot1/ota/partition/: partition.c  partition.h
boot1/ota/shell/: xformat.c  xstring.c
boot1/ota/ymodem/: ymodem.c  ymodem.h
boot1/partition/: partition.c  partition.h  partition_port.c
boot1/shell/: shell.c  shell.h  xformat.c  xformat.h  xstring.c  xstring.h
boot1/ymodem/: ymodem.c  ymodem.h
lib/: debug.h
link_scripts/: link.lds
memheap/: memheap.c  memheap.h
partition/: partition.c  partition.h
tool/: mk_image.c  pack.py
(+63 files in other folders)
